[package]
name = "mentat-places-test"
version = "0.2.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]

[dependencies]
mentat = { git = "https://github.com/mozilla/mentat.git", tag = "v0.11.0" }
rusqlite = { version = "0.13", features = ["bundled", "limits", "functions"] }
lazy_static = "1.1.0"
clap = "2.32.0"
log = "0.4.4"
env_logger = "0.5.12"
find-places-db = "0.1.0"
failure = "0.1.2"
tempfile = "3.0.3"


[profile.release]
opt-level = 3
debug = true
lto = true
